--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
-name = "medical-diary-rust"
-version = "0.1.0"
+name = "diary-cli"
+description = "small command line diary utility."
+
+readme = "README.md"
+license = "MIT"
+
+repository = "https://github.com/TheLazyFerret/diary-cli"
+
+version = "0.0.0"
 edition = "2024"
 
 [dependencies]
+libc = "0.2.180"
